# atom

./: .gitignore  AGENS_Project_ALL_RECORDS.md  CLAUDE.md  COMPANY_OVERVIEW.md  RAS_IMPORT_BOX - ショートカット (2).lnk  RAS_SYSTEM_OVERVIEW.md  RASサマリー投入用.md  create_training_pptx.py  famicom_office.html  fix_overflow.py  fix_overflow_nowrap.py  generate_word_report.py  make_script.py  organize.py  paste_to_ras.ps1  research_viewer.html  substack_gpt_strategy_research.html  tetris.html  令和8年度診療報酬改定_リハビリ戦略レポート.html  令和8年度診療報酬改定_リハビリ戦略レポートv2.html  令和8年度診療報酬改定_リハビリ戦略レポートv3.html  令和8年度診療報酬改定_部署別統合戦略レポートv4.html  住宅ローン比較レポート_2026年5月.html  常勤vs非常勤_パートタイムの法的評価.md  特養_機能訓練指導員_出向可否_詳細シナリオレポート.md  特養_機能訓練指導員_出向可否_調査レポート.md  特養_機能訓練指導員_出向配置_都道府県相談用資料.md  特養_機能訓練指導員_相談資料.docx  特養_機能訓練指導員_複数人常勤換算配置_法的検討レポート.md  特養_機能訓練指導員_配置_相談資料.html  特養_機能訓練指導員_配置_相談資料_モダン.html  特養_機能訓練指導員_配置_院長用_シンプル版.html  特養_機能訓練指導員_配置_院長用_詳細版.html  特養_機能訓練指導員_配置_院長説明用.html  肛門括約筋トレーニング_AI音声用原稿.txt  肛門括約筋トレーニング_動画原稿.md  肛門括約筋トレーニング_配布資料.docx  肛門括約筋トレーニング_配布資料.html
agens/: CLAUDE.md  (+16 more)
agens/note-sales/: pyproject.toml
agens/note-sales/config/: settings.yaml
agens/note-sales/data/db/: note_sales.db
agens/note-sales/data/knowledge/: winning_patterns.json
agens/note-sales/data/processed/: note_drafts.json  pain_points.json  topic_candidates.json
agens/note-sales/data/raw/: sample_comments.json  sample_manual_memo.json
agens/note-sales/docs/: architecture.md
agens/note-sales/src/: cli.py  tui.py
agens/note-sales/tests/: test_cli.py  test_note_writer.py  test_pain_intake.py  test_publisher.py  test_researcher.py
(+726 files in other folders)
